# test-generator-llm

./: .env.example  .gitignore  README.md  go.mod  main.go
orgChartApi/test/: CMakeLists.txt  test_controllers.cc  test_main.cc
pkg/llm/: llm_chat.go  llm_output_parser.go
pkg/models/: generated_file.go
pkg/prompts/: cmakelists_main.go  cmakelists_test_main.go  default_prompt.go  final_prompt.go
pkg/prompts/raw_prompt/: api_prompt.txt  end_prompt copy.txt  end_prompt.txt  error_prompt.txt  file_content_prompt.txt  file_struct.txt  start_prompt copy.txt  start_prompt.txt  system_prompt.txt
pkg/utils/: boxed_text.go  build_test_binary.go  copyfile.go  create_prompt_from_file.go  createfile.go  deletefile.go  readfile.go  renamefile.go  run_test_binary.go  writefile.go
test/: test_controllers.cc
